[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Classes/Dino8movement.gd" type="Script" id=1]
[ext_resource path="res://art/Characters/DinoSheets/DinoSprites - tard.png" type="Texture" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite
onready var animation_player = $AnimationPlayer

func handle_state(velocity:Vector2):
	if velocity ==  Vector2(0,0):
		animation_player.play('Idle')
	else:
		animation_player.play('Walk')
	if velocity.x < 0 and scale[0] > 0:
		flip()
	if velocity.x > 0 and scale[0] < 0:
		flip()
func flip():
	scale[0] = scale[0] * -1
	if get_parent().is_holding_item:
		get_parent().get_node(\"Item\").position.x = -1*get_parent().get_node(\"Item\").position.x
"

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 1.99998
height = 4.00004

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.99999
height = 6.0

[node name="DinoPlayer" type="KinematicBody2D" groups=[
"Carriable",
"Player",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 2 )
hframes = 24
frame = 9
script = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Idle = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 4 )

[node name="PlayerArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_DinoPlayer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DinoPlayer_mouse_exited"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_entered"]
[connection signal="body_exited" from="PlayerArea" to="." method="_on_PlayerArea_body_exited"]
